--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,93 +7,165 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="60dp"
-        android:layout_height="62dp"
+        android:id="@+id/btn_one"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
-        android:text="1"
+        android:text="@string/one"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="60dp"
-        android:layout_height="62dp"
+        android:id="@+id/btn_two"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="8dp"
-        android:text="2"
+        android:text="@string/two"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button" />
+        app:layout_constraintStart_toEndOf="@+id/btn_one" />
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="60dp"
-        android:layout_height="62dp"
+        android:id="@+id/btn_three"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
-        android:text="3"
+        android:text="@string/three"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button3" />
+        app:layout_constraintStart_toEndOf="@+id/btn_two" />
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="60dp"
-        android:layout_height="62dp"
+        android:id="@+id/btn_six"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
-        android:text="6"
-        app:layout_constraintBottom_toTopOf="@+id/button4"
-        app:layout_constraintStart_toEndOf="@+id/button6" />
+        android:text="@string/six"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_three"
+        app:layout_constraintStart_toEndOf="@+id/btn_five" />
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="60dp"
-        android:layout_height="62dp"
+        android:id="@+id/btn_five"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="12dp"
-        android:text="5"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintStart_toEndOf="@+id/button7" />
+        android:text="@string/five"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_two"
+        app:layout_constraintStart_toEndOf="@+id/btn_four" />
 
     <Button
-        android:id="@+id/button7"
-        android:layout_width="60dp"
-        android:layout_height="62dp"
+        android:id="@+id/btn_four"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
-        android:text="4"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:text="@string/four"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_one"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button8"
-        android:layout_width="60dp"
-        android:layout_height="62dp"
+        android:id="@+id/btn_seven"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
-        android:text="7"
-        app:layout_constraintBottom_toTopOf="@+id/button7"
+        android:text="@string/seven"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_four"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button9"
-        android:layout_width="60dp"
-        android:layout_height="62dp"
+        android:id="@+id/btn_eight"
+        android:layout_width="70dp"
+        android:layout_height="71dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
-        android:text="8"
-        app:layout_constraintBottom_toTopOf="@+id/button6"
-        app:layout_constraintStart_toEndOf="@+id/button8" />
+        android:text="@string/eight"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_five"
+        app:layout_constraintStart_toEndOf="@+id/btn_seven" />
 
     <Button
-        android:id="@+id/button10"
-        android:layout_width="60dp"
-        android:layout_height="62dp"
+        android:id="@+id/btn_nine"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
-        android:text="9"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
-        app:layout_constraintStart_toEndOf="@+id/button9" />
+        android:text="@string/nine"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_six"
+        app:layout_constraintStart_toEndOf="@+id/btn_eight" />
+
+    <ListView
+        android:id="@+id/lv_wineList"
+        android:layout_width="909dp"
+        android:layout_height="581dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_up"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="25dp"
+        android:text="@string/shift_up"
+        android:textSize="35sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lv_wineList"
+        tools:text="@string/shift_up" />
+
+    <Button
+        android:id="@+id/btn_down"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="75dp"
+        android:text="@string/shift_down"
+        android:textSize="35sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_left" />
+
+    <Button
+        android:id="@+id/btn_left"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="10dp"
+        android:text="@string/shift_left"
+        android:textSize="35sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_up" />
+
+    <Button
+        android:id="@+id/btn_right"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="90dp"
+        android:text="@string/shift_right"
+        android:textSize="35sp"
+        app:layout_constraintStart_toEndOf="@+id/btn_left"
+        app:layout_constraintTop_toBottomOf="@+id/lv_wineList" />
+
+    <Button
+        android:id="@+id/btn_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="65dp"
+        android:text="@string/btnAdd"
+        app:layout_constraintBottom_toTopOf="@+id/btn_eight"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_down" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
